# ajitroids

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  LICENSE  Makefile  README.md  RELEASE_INSTRUCTIONS.md  Roadmap.md  SECURITY.md  VERSION_MANAGEMENT.md  achievement_notification.py  achievements.py  asteroid.py  asteroidfield.py  boss.py  bossprojectile.py  constants.py  highscore.py  highscores.json  main.py  menu.py  mkdocs.yml  particle.py  player.py  powerup.py  pyproject.toml  requirements.txt  settings.py  setup.cfg  shot.py  sound_assets_report.txt  sounds.py  starfield.py  tutorial.py  update_version.py
.development/: Roadmap.md  generate_menu_screenshots.py  setup-dev.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  manual-release.yml  pages.yml  python-package.yml  release.yml
devtools/: .gitignore  README.md  changelog.md  flow.css  flow.html  full-releaae-sh-flow.html  full-release.sh  generate_docs.py  markdownlint2html.py  release-manager.sh  version.txt
docs/: CONTRIBUTING-TO-DOCS.md  getting-started.md  index.html  index.md
docs/api/: python.md
docs/architecture/: data-flow.md  game-mechanics.md  overview.md  pygame-integration.md  settings.md
docs/assets/css/: style.css
docs/development/: CONTRIBUTING_SETUP.md  contributing.md  release-process.md  testing.md
docs/reference/: cli-dev-scripts.md  configuration.md  performance-profiler.md
modul/: __init__.py  _version.py  achievement_notification.py  achievements.py  asteroid.py  asteroidfield.py  audio_enhancements.py  boss.py  bossprojectile.py  circleshape.py  constants.py  groups.py  help_screen.py  highscore.py  i18n.py  input_utils.py  menu.py  particle.py  performance_profiler.py  player.py  powerup.py  replay_system.py  replay_ui.py  session_stats.py  settings.py  ships.py  shot.py  sounds.py  starfield.py  stats_dashboard.py  tts.py  tutorial.py  update_version.py  version.py
modul/assets/: __init__.py
modul/locales/: de.json  en.json
scripts/: add_missing_docstrings.py  add_modul_docstrings.py  auto_resolve_docstring_conflicts.py  auto_resolve_safe_hunks.py  fix_constants_imports.py  generate-diagrams.sh  generate_boss_death.py  mark_broad_excepts.py  rename_unused_test_args.py
tests/: .pylintrc  test_achievement_notification.py  test_achievements.py  test_asteroid.py  test_asteroid_types.py  test_asteroidfield.py  test_audio_enhancements.py  test_boss.py  test_bossprojectile.py  test_circleshape.py  test_highscore.py  test_input_utils.py  test_levelup.py  test_main.py  test_main_basic.py  test_menu.py  test_menu_comprehensive.py  test_new_features.py  test_particle.py  test_performance_profiler.py  test_player.py  test_player_respawn.py  test_powerup.py  test_powerup_effect.py  test_quick_restart.py  test_replay_system.py  test_settings.py  test_ships.py  test_shot.py  test_sounds.py  test_starfield.py  test_stats_dashboard.py  test_tutorial_comprehensive.py
