[tool.pylint.messages_control]
disable = ["fixme", "too-many-lines", "too-many-arguments", "too-many-branches", "too-many-statements", "too-many-instance-attributes", "too-many-locals", "duplicate-code"]

[tool.pylint.format]
ignore-patterns = ["modul/_version.py"]
max-line-length = 127

[tool.black]
line-length = 127
target-version = ["py39", "py310", "py311", "py312"]

[tool.flake8]
max-line-length = 127
exclude = ["build", "venv", "__pycache__"]
ignore = ["E128", "F405"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v"
testpaths = ["tests"]
filterwarnings = [
  "ignore:pkg_resources is deprecated as an API:UserWarning",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "modul/_version.py"
fallback_version = "0.22.0"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "flake8>=7.0",
    "black>=24.0",
]

[project]
name = "ajitroids"
dynamic = ["version"]
description = "Another Asteroids"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
    "pygame==2.6.1",
]
authors = [
  { name = "Ajimaru", email = "ajitroids@noreply.github.com" }
]
license = { text = "MIT" }
keywords = ["asteroids", "pygame", "space", "game"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Games/Entertainment",
  "License :: OSI Approved :: MIT License"
]

[project.urls]
"Homepage" = "https://github.com/Ajimaru/ajitroids"
"Bug Tracker" = "https://github.com/Ajimaru/ajitroids/issues"

[project.scripts]
ajitroids = "main:main"
